# serialization

./: .gitignore  README.md  compileBenchmarkObjectFlatBuffersCPP.sh  compileBenchmarkObjectProtoCPP.sh  compileFlatBuffersCPP.sh  compileFlatBuffersJava.sh  compileProtoCPP.sh  compileProtoJava.sh  compileSimpleObjectProtoCPP (copy).sh  myTest.sh  oldReadme.md  pom.xml
C++/: CMakeLists.txt  README.md  compileFlatBuffers.sh  compileProto.sh  experimentExternalSort.sh  experimentReadObjects.sh  makeClean.sh  networkClient.sh  networkServer.sh  resultPath.sh  server_path.txt  twitterExternalSort.sh  twitterGenerateData.sh  twitterGenerateRandomList.sh  twitterRandomRead.sh  twitterSequentialRead.sh  twitterSerialization.sh
C++/src/benchmarks/header/: DataSerialization.h  ExternalSort.h  NetworkClient.h  RandomRead.h  SequentialRead.h
C++/src/benchmarks/source/: DataSerialization.cpp  ExternalSort.cpp  GenerateData.cpp  GenerateRandomList.cpp  NetworkClient.cpp  NetworkServer.cpp  RandomRead.cpp  SequentialRead.cpp
C++/src/filehandler/header/: DataReader.h  FileHandler.h  LogFileHandler.h
C++/src/filehandler/source/: DataReader.cpp  FileHandler.cpp  LogFileHandler.cpp
C++/src/networkadapter/header/: ClientSocket.h  ServerSocket.h  Socket.h  SocketException.h
C++/src/networkadapter/source/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp
C++/src/rootdata/header/: RootData.h
C++/src/rootdata/source/: RootData.cpp
C++/src/serialization/header/: AdditionalMediaInfoEntity.h  BoundingBoxCoordinate.h  Coordinates.h  Entities.h  ExtendedEntities.h  HashtagEntity.h  MatchingRulesEntity.h  MediaEntity.h  MediaSizesEntity.h  OptionEntity.h  Place.h  PollEntity.h  SizeEntity.h  SymbolEntity.h  TweetStatus.h  URLEntity.h  User.h  UserMentionEntity.h  VariantEntity.h  VideoEntity.h
C++/src/serialization/header/flatbuffers/: AdditionalMediaInfoEntityFBS.h  BoundingBoxCoordinateFBS.h  CoordinatesFBS.h  EntitiesFBS.h  ExtendedEntitiesFBS.h  HashtagEntityFBS.h  MatchingRulesEntityFBS.h  MediaEntityFBS.h  MediaSizesEntityFBS.h  OptionEntityFBS.h  PlaceFBS.h  PollEntityFBS.h  SizeEntityFBS.h  SymbolEntityFBS.h  TweetStatusFBS.h  TweetStatusFlatBuffers.h  URLEntityFBS.h  UserFBS.h  UserMentionEntityFBS.h  VariantEntityFBS.h  VideoEntityFBS.h
C++/src/serialization/header/inplace/: AdditionalMediaInfoEntityIP.h  Allocator.h  BoundingBoxCoordinateIP.h  CoordinatesIP.h  EntitiesIP.h  ExtendedEntitiesIP.h  HashtagEntityIP.h  MatchingRulesEntityIP.h  MediaEntityIP.h  MediaSizesEntityIP.h  Object.h  OptionEntityIP.h  PlaceIP.h  PollEntityIP.h  SizeEntityIP.h  SymbolEntityIP.h  TweetStatusIP.h  URLEntityIP.h  UserIP.h  UserMentionEntityIP.h  VariantEntityIP.h  VideoEntityIP.h
C++/src/serialization/header/proto/: TweetStatusP.pb.h  TweetStatusProto.h
C++/src/serialization/source/: AdditionalMediaInfoEntity.cpp  BoundingBoxCoordinate.cpp  Coordinates.cpp  Entities.cpp  ExtendedEntities.cpp  HashtagEntity.cpp  MatchingRulesEntity.cpp  MediaEntity.cpp  MediaSizesEntity.cpp  OptionEntity.cpp  Place.cpp  PollEntity.cpp  SizeEntity.cpp  SymbolEntity.cpp  TweetStatus.cpp  URLEntity.cpp  User.cpp  UserMentionEntity.cpp  VariantEntity.cpp  VideoEntity.cpp
C++/src/serialization/source/flatbuffers/: Coordinates.fbs  Entities.fbs  MatchingRulesEntity.fbs  MediaEntity.fbs  MediaSizesEntity.fbs  TweetStatus.fbs  TweetStatusFlatBuffers.cpp  User.fbs
C++/src/serialization/source/inplace/: AdditionalMediaInfoEntityIP.cpp  BoundingBoxCoordinateIP.cpp  CoordinatesIP.cpp  EntitiesIP.cpp  ExtendedEntitiesIP.cpp  HashtagEntityIP.cpp  MatchingRulesEntityIP.cpp  MediaEntityIP.cpp  MediaSizesEntityIP.cpp  OptionEntityIP.cpp  PlaceIP.cpp  PollEntityIP.cpp  SizeEntityIP.cpp  SymbolEntityIP.cpp  TweetStatusIP.cpp  URLEntityIP.cpp  UserIP.cpp  UserMentionEntityIP.cpp  VariantEntityIP.cpp  VideoEntityIP.cpp
C++/src/serialization/source/proto/: TweetStatusP.pb.cc  TweetStatusP.proto  TweetStatusProto.cpp
Java/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  ExternalSort.cpp  compileFlatBuffers.sh  compileProto.sh  makeClean.sh  test.cpp
Java/src/main/cpp/experiments/: DataLoadToMemorySingle.cpp  DataPrepare.cpp  DataReadIOParallel.cpp  DataReadNetwork.h  (+6 more)
Rust/: Cargo.toml  README.md  experimentExternalSort.sh  experimentReadObjects.sh  makeClean.sh  myTest.sh  resultPath.sh  twitterExternalSort.sh  twitterRandomRead.sh  twitterSequentialRead.sh  twitterSerialization.sh
Rust/src/: main.rs
Rust/src/benchmarks/: DataSerialization.rs  ExternalSort.rs  RandomRead.rs  SequentialRead.rs  mod.rs
Rust/src/filehandler/: FileHandler.rs  LogFileHandler.rs
Rust/src/tweetStructs/: AdditionalMediaInfoEntity.rs  BoundingBoxCoordinate.rs  Coordinates.rs  Entities.rs  ExtendedEntities.rs  HashtagEntity.rs  MatchingRulesEntity.rs  MediaEntity.rs  MediaSizesEntity.rs  OptionEntity.rs  Place.rs  PollEntity.rs  SizesEntity.rs  SymbolEntity.rs  TweetStatus.rs  URLEntity.rs  User.rs  UserMentionEntity.rs  VariantEntity.rs  VideoEntity.rs  mod.rs
Rust/src/util/: ObjectFileIndex.rs  mod.rs
src/main/cpp/: CMakeLists.txt
src/main/cpp/benchmark/: ComplexObjectL1.cpp  ComplexObjectL2.cpp  ComplexObjectL3.cpp  ComplexObjectL4.cpp  SimpleObject.cpp
src/main/cpp/experiments/: DataLoadToMemoryParallel.cpp  DataLoadToMemorySingle.cpp  DataPrepare.cpp  DataReadIOParallel.cpp  DataReadIOSingle.cpp  DataReadNetwork.cpp  DataReadNetwork.h  DataReadNetworkIO.cpp  DataReadNetworkIO.h  DataReadNetworkNetworkIO.cpp  DataReadNetworkNetworkIO.h  DataReadParallel.cpp  DataReadSingle.cpp  DataSerializationParallel.cpp  DataSerializationSingle.cpp  DataWriteParallel.cpp  DataWriteSingle.cpp  ExternalSort.cpp  ExternalSort.h  ExternalSortIO.cpp  ExternalSortIO.h
src/main/rust/: Cargo.toml
src/main/rust/src/: DataLoadToMemoryParallel.rs  DataLoadToMemorySingle.rs  DataPrepare.rs  DataReadIOParallel.rs  DataReadIOSingle.rs  DataReadNetwork.rs  DataReadNetworkIO.rs  DataReadParallel.rs  DataReadSingle.rs  DataSerializationParallel.rs  DataSerializationSingle.rs  DataWriteParallel.rs  DataWriteSingle.rs  ExternalSort.rs  ExternalSortIO.rs  main.rs
(+1853 files in other folders)
