[package]
name = "Rust"
version = "0.1.0"
authors = ["saeed <s.fathollahzadeh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "DataSerialization"
#path = "src/benchmarks/DataSerialization.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
serde_cbor = "0.11.1"
rmp-serde = "0.14.3"
serde_yaml = "0.8"
toml = "0.5"
serde-pickle = "0.6"
ron = "0.6.0"
bson = "1.0.0"
avro-rs = "0.10.0"
json5 = "0.2.8"
postcard = "0.5.0"
smallvec = "1.0"
flexbuffers = "0.1.1"

bytes = "0.5"
rand = "0.7"
chrono = "0.4"
bytebuffer-rs = "0.3.1"
