[package]
name = "Rust"
version = "0.1.0"
authors = ["saeed <s.fathollahzadeh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-Awarnings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
bincode = "1.3.1"
rmp-serde = "0.14.3"
bson = "1.0.0"
flexbuffers = "0.1.1"

bytes = { version = "0.5", features = ["serde"] }
rand = "0.7"
chrono = "0.4"
bytebuffer-rs = "0.3.1"
priority-queue = "1.0.0"
