[package]
name = "rust"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Saeed Fathollahzadeh <s.fathollahzadeh@gmail.com>"]

[[bin]]
name="DataLoadToMemorySingle"
path = "src/DataLoadToMemorySingle.rs"

[[bin]]
name="DataLoadToMemoryParallel"
path = "src/DataLoadToMemoryParallel.rs"

[[bin]]
name="DataPrepare"
path = "src/DataPrepare.rs"

[[bin]]
name="DataReadSingle"
path = "src/DataReadSingle.rs"

[[bin]]
name="DataReadParallel"
path = "src/DataReadParallel.rs"

[[bin]]
name="DataReadIOSingle"
path = "src/DataReadIOSingle.rs"

[[bin]]
name="DataReadIOParallel"
path = "src/DataReadIOParallel.rs"

[[bin]]
name="DataSerializationSingle"
path = "src/DataSerializationSingle.rs"

[[bin]]
name="DataSerializationParallel"
path = "src/DataSerializationParallel.rs"

[[bin]]
name="DataWriteSingle"
path = "src/DataWriteSingle.rs"

[[bin]]
name="DataWriteParallel"
path = "src/DataWriteParallel.rs"

[[bin]]
name="ExternalSort"
path = "src/ExternalSort.rs"

[[bin]]
name="ExternalSortIO"
path = "src/ExternalSortIO.rs"

[[bin]]
name="DataReadNetwork"
path = "src/DataReadNetwork.rs"

[build]
rustflags = ["-Awarnings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
bincode = "1.3.3"
rmp-serde = "1.1.0"
bson = "2.3.0"
flexbuffers = "2.0.0"

bytes = { version = "0.6.0", features = ["serde"] }
rand = "0.8.5"
chrono = "0.4.22"
bytebuffer-rs = "0.4.0"
priority-queue = "1.2.3"

num_cpus = "1.13.1"
crossbeam = "0.8"
csv = "1.1"
local-ip-address = "0.4.8"
blockingqueue = "0.1.1"
byteorder = "1"